--- a/calculator.css
+++ b/calculator.css
@@ -1,5 +1,6 @@
 body{
 	background-color: lightgrey;
+	
 
 }
 main{
@@ -16,7 +17,7 @@ aside{
     margin-top: 200px;
 
 }
-button{
+input{
 	margin-left: 40px;
 	margin-right: 40px;
 	margin-bottom: 40px;
@@ -27,27 +28,32 @@ button{
 button.c{
 	position: absolute;
 	top: 125px;
-	right: 435px;
-
+	right: 475px;
+	border-radius: 25px;
+	height: 45px;
+	width: 45px;
+	text-align: center;
 }
-span.som{
+input#som{
 	border: 2px solid black;
 	position: absolute;
 	top: 110px;
-	left: 500px ;
+	left: 450px ;
 	height: 80px;
 	width: 300px;
 	background-color: white;
-	word-wrap: break-word;
-	overflow-x: scroll;
+	border-radius: 0px;
+	text-align: right;
 
 }
-span.antwoord{
+input#antwoord{
 	border: 2px solid black;
-	padding-left: 300px;
-	padding-top: 30px;
+	padding-left: 255px;
+	padding-top: 10px;
 	position: absolute;
-	top: 50px;
-	left: 500px ;
+	top: 20px;
+	left: 450px ;
 	background-color: white;
+	border-radius: 0px;
+	text-align: right;
 }
