--- a/calculator.css
+++ b/calculator.css
@@ -8,7 +8,7 @@ main{
 	height: 600px;
 	margin-left: auto;
 	margin-right: auto;
-	border: 4px solid yellow;
+	border: 4px solid red;
 }
 aside{
 	display: inline-flex;
